k8s/production/openig.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: openig-production
spec:
  replicas: 3
  template:
    metadata:
      name: openig
      labels:
       name: openig
       release: production
    spec:
      containers:
      - name: openig
        image: IMAGE_TEMPLATE
        # Assume image is in our docker cache. Part of the CI build process
        imagePullPolicy: IfNotPresent
        ports:
        - name: openig
          containerPort: 8080
        volumeMounts:
          - name: keystore
            mountPath: /var/secrets/openig
            readOnly: true
      volumes:
        - name: keystore
          secret:
            secretName: openig
