k8s/production/sample-app.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sample-app
spec:
  replicas: 2
  revisionHistoryLimit: 2
  template:
    metadata:
      name: sample-app
      labels:
         name: sample-app
    spec:
      containers:
      - name: openig
        # This template gets replaced with the real image name by the deploy script
        image: forgerock/openig-sample-server:5.0-alpine
        imagePullPolicy: IfNotPresent
